[package]
name = "async_smux"
version = "0.2.1"
authors = [
    "black-binary <blackbinary@qq.com>",
    "spacemeowx2 <spacemeowx2@gmail.com>",
]
description = "Asynchronous smux multiplexing library"
license = "MIT"
edition = "2021"

[dependencies]
futures = "0.3"
bytes = "1.1.0"
rand = "0.8.5"
log = "0.4"
tokio = "1"
async-channel = "1.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.1.0"
env_logger = "0.9.0"
criterion = "0.3"
pprof = { version = "0.8.0", features = ["flamegraph"] }

[profile.release]
debug = true
